Add testing, prepare for major change to algorithm

--- a/p384/Makefile
+++ b/p384/Makefile
@@ -1,4 +1,6 @@
-CFLAGS=-g -fsanitize=undefined
+CFLAGS=-g -O3
 CC=clang-mp-3.9
-test.py : p384_32
-	./p384_32 > test.py
+.PHONY: all
+all: p384_32_test p384_32_time
+p384_32_test: p384_32_test.o p384_32.o
+p384_32_time: p384_32_time.o p384_32.o
