--- a/p384/Makefile
+++ b/p384/Makefile
@@ -1,5 +1,6 @@
-CFLAGS=-g -O3
-CC=clang-mp-3.9
+CFLAGS=-g -O3 -m32
+CC=clang-mp-3.9 -m32
+LDFLAGS=
 .PHONY: all
 all: p384_32_test p384_32_time
 p384_32_test: p384_32_test.o p384_32.o
