--- a/p521/Makefile
+++ b/p521/Makefile
@@ -1,5 +1,5 @@
-CFLAGS = -g -I/opt/local/include -Wall -O3 -m32
-LDFLAGS=-lgmp -L/opt/local/lib -m32
+CFLAGS = -g -I/opt/local/include -Wall -O3 
+LDFLAGS=-lgmp -L/opt/local/lib
 CC = gcc-mp-6
 .PHONY: all
 .PHONY: clean
