--- a/p384/Makefile
+++ b/p384/Makefile
@@ -3,18 +3,11 @@ CC=clang-mp-3.9
 LDFLAGS=-lgmp -L/opt/local/lib -m32
 .PHONY: all
 .PHONY: clean
-all: p384_32_test p384_32_time p384_32_time_double p384_32_test_ecdsa p384_32_unsat_test p384_32_unsat_test_ecdsa p384_32_unsat_time
+all: p384_32_test p384_32_time p384_32_time_double p384_32_test_ecdsa
 p384_32_test: p384_32_test.o p384_32.o
 p384_32_time: p384_32_time.o p384_32.o
 p384_32_time_double: p384_32_time_double.o p384_32.o
 p384_32_test_ecdsa: p384_32_test_ecdsa.o p384_32.o
-p384_32_unsat_test: p384_32_test.o p384_32_unsat.o
-	$(CC) $(LDFLAGS) $^ -o p384_32_unsat_test $(LOADLIBES) $(LDLIBS)
-p384_32_unsat_test_ecdsa: p384_32_test_ecdsa.o p384_32_unsat.o
-	$(CC) $(LDFLAGS) $^ -o p384_32_unsat_test_ecdsa $(LOADLIBES) $(LDLIBS)
-p384_32_unsat_time: p384_32_time.o p384_32_unsat.o
-	$(CC) $(LDFLAGS) $^ -o p384_32_unsat_time $(LOADLIBES) $(LDLIBS)
 clean:
 	rm -f *.o
-	rm p384_32_test p384_32_time p384_32_time_double p384_32_test_ecdsa \
-		p384_32_unsat_test p384_32_unsat_time p384_32_unsat_test_ecdsa
+	rm p384_32_test p384_32_time p384_32_time_double p384_32_test_ecdsa
