A bit closer, clearly needs lots more work

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,24 @@
 *.o
 *~
+p384/p384_32_test
+p384/p384_32_test.dSYM/
+p384/p384_32_test_ecdsa
+p384/p384_32_test_ecdsa.dSYM/
+p384/p384_32_time
+p384/p384_32_time.dSYM/
+p384/p384_32_time_double
+p384/p384_32_unsat_test
+p384/p384_32_unsat_test_ecdsa
+p384/p384_32_unsat_time
+p521/p521_32_dh_test
+p521/p521_32_dh_test.dSYM/
+p521/p521_32_dh_time
+p521/p521_32_dh_time.dSYM/
+p521/p521_32_kat_test
+p521/p521_32_kat_test.dSYM/
+p521/p521_32_test_ecdsa.dSYM/
+p521/p521_64_dh_test
+p521/p521_64_dh_time
+p521/p521_64_kat_test
+p521/p521_64_kat_test.dSYM/
+p521/p521_64_test_ecdsa
